# taskmaster

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  system_config.yaml
cmake/: Dependencies.cmake  ProjectOptions.cmake
dags/: branching.yaml  daily_etl.yaml  docker_example.yaml  hello_world.yaml  monitoring.yaml  sensors.yaml  simple.yaml  trigger_rules.yaml  xcom_example.yaml  xcom_pipeline.yaml
examples/: backup_rotation.yaml  etl_pipeline.yaml  monitoring.yaml  simple.yaml
include/taskmaster/: application.hpp  cancellation.hpp  config.hpp  coroutine.hpp  cron.hpp  dag.hpp  dag_manager.hpp  dag_run.hpp  engine.hpp  error.hpp  event_queue.hpp  executor.hpp  lockfree_queue.hpp  log.hpp  persistence.hpp  recovery.hpp  runtime.hpp  task.hpp  util.hpp
include/taskmaster/api/: api_server.hpp  websocket_hub.hpp
include/taskmaster/app/: application.hpp  config_builder.hpp
include/taskmaster/app/api/: api_server.hpp  websocket_hub.hpp
include/taskmaster/app/docker/: docker_client.hpp
include/taskmaster/app/http/: http_client.hpp  http_parser.hpp  http_server.hpp  http_types.hpp  router.hpp  websocket.hpp
include/taskmaster/app/http/services/: event_service.hpp  scheduler_service.hpp
include/taskmaster/app/services/: event_service.hpp  execution_service.hpp  persistence_service.hpp  scheduler_service.hpp
include/taskmaster/cli/: commands.hpp
include/taskmaster/client/docker/: docker_client.hpp
include/taskmaster/client/http/: http_client.hpp  http_parser.hpp  http_types.hpp
include/taskmaster/config/: config.hpp  config_watcher.hpp  dag_definition.hpp  dag_file_loader.hpp  system_config.hpp  task_config.hpp  yaml_utils.hpp
include/taskmaster/core/: arena.hpp  blocking.hpp  constants.hpp  coroutine.hpp  error.hpp  io_ring.hpp  lockfree_queue.hpp  runtime.hpp  shard.hpp
include/taskmaster/dag/: dag.hpp  dag_manager.hpp  dag_run.hpp  dag_validator.hpp
include/taskmaster/executor/: cancellation.hpp  composite_executor.hpp  docker_executor.hpp  executor.hpp
include/taskmaster/io/: async_fd.hpp  buffer.hpp  context.hpp  result.hpp  stream.hpp  timer_fd.hpp
include/taskmaster/scheduler/: cron.hpp  engine.hpp  event_queue.hpp  task.hpp
include/taskmaster/storage/: config.hpp  persistence.hpp  recovery.hpp  state_strings.hpp
include/taskmaster/util/: daemon.hpp  hash.hpp  id.hpp  log.hpp  util.hpp
include/taskmaster/xcom/: template_resolver.hpp  xcom_extractor.hpp  xcom_types.hpp
src/: main.cpp
src/taskmaster/: application.cpp  config.cpp  cron.cpp  dag.cpp  dag_manager.cpp  dag_run.cpp  engine.cpp  persistence.cpp  recovery.cpp  runtime.cpp  shell_executor.cpp
src/taskmaster/api/: api_server.cpp  websocket_hub.cpp
src/taskmaster/app/: application.cpp  config_builder.cpp
src/taskmaster/app/api/: api_server.cpp  websocket_hub.cpp
src/taskmaster/app/docker/: docker_client.cpp
src/taskmaster/app/http/: http_client.cpp  http_parser.cpp  http_server.cpp  http_types.cpp  router.cpp  websocket.cpp
src/taskmaster/app/services/: event_service.cpp  execution_service.cpp  persistence_service.cpp  scheduler_service.cpp
src/taskmaster/cli/: list.cpp  run.cpp  serve.cpp  status.cpp  validate.cpp
src/taskmaster/client/docker/: docker_client.cpp
src/taskmaster/client/http/: http_client.cpp  http_parser.cpp  http_types.cpp
src/taskmaster/config/: config.cpp  config_watcher.cpp  dag_definition.cpp  dag_file_loader.cpp
src/taskmaster/core/: io_ring.cpp  runtime.cpp  shard.cpp
src/taskmaster/dag/: dag.cpp  dag_manager.cpp  dag_run.cpp
src/taskmaster/executor/: composite_executor.cpp  config_builder.cpp  docker_executor.cpp  noop_executor.cpp  sensor_executor.cpp  shell_executor.cpp
src/taskmaster/io/: async_fd.cpp  context.cpp  timer_fd.cpp
src/taskmaster/scheduler/: cron.cpp  engine.cpp
src/taskmaster/storage/: config.cpp  persistence.cpp  recovery.cpp
src/taskmaster/util/: daemon.cpp
src/taskmaster/xcom/: template_resolver.cpp  xcom_extractor.cpp
tests/: CMakeLists.txt  api_e2e_test.cpp  api_test.cpp  branching_test.cpp  config_test.cpp  config_watcher_test.cpp  crash_recovery_test.cpp  cron_bench.cpp  cron_test.cpp  dag_bench.cpp  dag_manager_bench.cpp  dag_manager_test.cpp  dag_run_bench.cpp  dag_run_test.cpp  dag_test.cpp  dag_validation_test.cpp  docker_client_test.cpp  docker_executor_test.cpp  e2e_bench.cpp  engine_bench.cpp  engine_test.cpp  executor_bench.cpp  executor_test.cpp  http_client_test.cpp  integration_test.cpp  interview_bench.cpp  iouring_bench.cpp  lockfree_queue_bench.cpp  lockfree_queue_test.cpp  noop_executor_bench.cpp  persistence_bench.cpp  persistence_test.cpp  runtime_bench.cpp  runtime_test.cpp  sensor_executor_test.cpp  shard_bench.cpp  shard_test.cpp  template_resolver_test.cpp  test_utils.hpp  trigger_rule_test.cpp  (+2 more)
tests/scheduler/: recovery_test.cpp
tests/storage/: watermark_test.cpp
web-ui/: index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.js  vite.config.ts
web-ui/src/: App.jsx  App.tsx  api.js  index.css
web-ui/src/components/: AppLayout.tsx  AppSidebar.tsx  DAGCard.tsx  DAGFlow.tsx  DAGTable.tsx  LogTimeline.tsx  StatCard.tsx  TerminalLayout.jsx  ThemeProvider.tsx  ThemeToggle.tsx
web-ui/src/components/ui/: sidebar.tsx
web-ui/src/hooks/: use-mobile.tsx
web-ui/src/lib/: api.ts  status.tsx  websocket.ts
web-ui/src/pages/: DAGDetail.tsx  DAGs.jsx  DAGs.tsx  Dashboard.jsx  Dashboard.tsx  History.tsx  Logs.tsx  NotFound.tsx  Settings.tsx
web-ui/src/types/: dag.ts
